@@ -10,6 +10,7 @@ Changelog for GEMC
  - for FASTMC mode, do not process RF
  - added FASTMC mode TXT and EVIO output: smeared and unsmeared quantities
  - Simple field integration for FASTMC mode. 
+ - more precise evaluation of events processing time
 
 2/14/17
  - added Scintillation in the process catalogue. Added verbosity condition to print not catalogue pro
